--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
             </header>
 
             <form class="form">
-                <div class="email">
-                    <label for="email">E-mail</label>
-                    <input placeholder="Entre com seu E-mail" type="email">
-                </div>
+                <div class="email-senha">
+                    <div class="email">
+                        <label for="email">E-mail</label>
+                        <input placeholder="Entre com seu E-mail" type="email">
+                    </div>
+    
+                    <div class="senha">
+                        <label for="senha">Senha</label>
+                        <input id="senha" placeholder="Entre com sua senha" type="password">
+                    </div>
 
-                <div class="senha">
-                    <label for="senha">Senha</label>
-                    <input id="senha" placeholder="Entre com sua senha" type="password">
                 </div>
 
                 <div class="check-box">
